fix content shift upward on nav-tabs nav-link hover when nav-link wraps content with a different font size

--- a/docs/4/lumen/_bootswatch.scss
+++ b/docs/4/lumen/_bootswatch.scss
@@ -289,7 +289,7 @@ $web-font-path: "https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400
     &:not(.disabled):hover,
     &:not(.disabled):focus,
     &.active {
-      padding-bottom: calc(0.5em + 6px);
+      padding-bottom: calc(0.5rem + 6px);
       border-bottom-color: transparent;
       margin-top: 0;
     }
